--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "maptastic",
   "version": "0.0.0",
+  "main": "./build/maptastic.js",
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-concat": "~0.5.0",
