--- a/package.json
+++ b/package.json
@@ -1,8 +1,22 @@
 {
   "name": "maptastic",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "files": [
+    "license.txt",
+    "src/**/*",
+    "dist/**/*",
+    "lib/**/*"
+  ],
+  "scripts": {
+    "build": "grunt",
+    "prepublish": "npm run build"
+  },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "grunt": "~0.4.5",
+    "grunt-babel": "^7.0.0",
+    "grunt-cli": "^1.2.0",
     "grunt-contrib-concat": "~0.5.0",
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "~0.6.1"
