--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   ],
   "scripts": {
     "build": "grunt",
+    "clean": "rimraf dist",
     "prepublish": "npm run build"
   },
   "devDependencies": {
@@ -17,9 +18,14 @@
     "babel-preset-env": "^1.6.1",
     "grunt": "~0.4.5",
     "grunt-babel": "^7.0.0",
+    "grunt-browserify": "^5.2.0",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-concat": "~0.5.0",
     "grunt-contrib-uglify": "~0.5.0",
-    "grunt-contrib-watch": "~0.6.1"
+    "grunt-contrib-watch": "~0.6.1",
+    "rimraf": "^2.6.2"
+  },
+  "dependencies": {
+    "numeric": "^1.2.6"
   }
 }
