Added license string
Signed-off-by: Austin C.E <austin.cawley@gmail.com>

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "maptastic",
   "version": "1.0.0",
   "main": "dist/maptastic.js",
+  "license": "SEE LICENSE IN license.txt",
   "files": [
     "license.txt",
     "src/**/*",
